# puzzle

./: .prettierrc  CHANGELOG.md  CLAUDE.md  Makefile  README-dev.md  README.md  example.env  manage.py  package-lock.json  package.json  pyproject.toml
.github/: FUNDING.yml  dependabot.yml
.github/actions/setup-python/: action.yml
.github/actions/setup-tools/: action.yml
.github/workflows/: django.yml  docker.yml  docs.yml  lint.yml  test.yml
accounting/: admin.py  apps.py  cache.py  constants.py  models.py
accounting/migrations/: 0001_initial.py  0002_account.py
common/: admin.py  apps.py  cache.py  constants.py  http_helpers.py  influxdb.py  models.py  register.py  reporting_platform.py  scheduler.py  utils.py
common/management/commands/: populate_with_currencies.py
common/migrations/: 0001_initial.py
docs/: docusaurus.config.ts  package-lock.json  package.json
docs/blog/: 2025-01-01-welcome.md  authors.yml  tags.yml
docs/docs/: intro.md
docs/docs/getting-started/: _category_.json  configuration.md  installation.md
docs/src/css/: custom.css
docs/src/pages/: index.module.css  index.tsx
infrastructure/: Dockerfile  README.md  docker-compose.yml  grafana.sh  influxdb.sh  redis.sh
puzzle/: asgi.py  settings.py  urls.py  wsgi.py
trading/: admin.py  apps.py  cache.py  constants.py  forms.py  models.py  utils.py
trading/exchange_api/: base.py  kraken.py  register.py
trading/management/commands/: buy_based_on_deposit.py  get_exchange_balance.py  get_price.py  get_trades.py  populate_with_exchanges.py
trading/migrations/: 0001_initial.py
(+1 files in other folders)
